tests/error/unknown_identifier.ca

testBlock = ->
  print(a)

vm = make_vm(testBlock)
vm.run

assert(vm.error_message == "Unknown identifier: a")


